cluster/apps/external/wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: external
spec:
  type: ExternalName
  externalName: 192.168.1.147
  ports:
    - port: 3000
