cluster/apps/external/wiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://js.wiki/img/wikijs-full-2021.b840e376.svg
  name: wiki
  namespace: external
spec:
  rules:
  - host: wiki.witlinserver.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wiki
            port:
              number: 3000
  tls:
  - hosts:
    - wiki.witlinserver.com
    secretName: wiki-cert
